# jsonschema-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  MIGRATION.md  README.md  codecov.yaml  typos.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  cli-release.yml  codspeed.yml  daily.yml  links.yml  python-release-verify.yml  python-release.yml  ruby-release.yml  rust-release.yml
bindings/python/: CHANGELOG.md  Cargo.toml  setup.py
bindings/python/tests-py/: test_jsonschema.py  test_suite.py
crates/benchmark/: Cargo.toml
crates/benchmark-suite/: Cargo.toml  README.md
crates/benchmark-suite/benches/: boon.rs  jsonschema.rs  jsonschema_valid.rs  valico.rs
crates/benchmark/src/: lib.rs
crates/jsonschema/: Cargo.toml
crates/jsonschema-cli/: Cargo.toml  README.md
crates/jsonschema-cli/src/: main.rs
crates/jsonschema-cli/tests/: cli.rs
crates/jsonschema-cli/tests/snapshots/: cli__no_instances.snap  cli__output_text_invalid_yaml.snap  cli__output_text_multiple_errors.snap  cli__output_text_single_error.snap
crates/jsonschema-py/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/jsonschema-py/python/jsonschema_rs/: __init__.py  __init__.pyi
crates/jsonschema-py/src/: http.rs  lib.rs  ser.rs
crates/jsonschema-py/tests-py/: test_http_options.py  test_jsonschema.py  test_meta.py  test_suite.py
crates/jsonschema-rb/: .gitignore  .rubocop.yml  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE  MIGRATION.md  README.md  Rakefile  extconf.rb  jsonschema.gemspec  justfile
crates/jsonschema-rb/bench/: benchmark.rb
crates/jsonschema-rb/ext/jsonschema/: Cargo.toml  extconf.rb
crates/jsonschema-rb/lib/: jsonschema.rb  jsonschema_rs.rb
crates/jsonschema-rb/lib/jsonschema/: version.rb
crates/jsonschema-rb/sig/: jsonschema.rbs
crates/jsonschema-rb/spec/: jsonschema_spec.rb  readme_spec.rb  spec_helper.rb  suite_spec.rb
crates/jsonschema-rb/src/: error_kind.rs  evaluation.rs  lib.rs  options.rs  registry.rs  retriever.rs  ser.rs  static_id.rs
crates/jsonschema-referencing/: Cargo.toml
crates/jsonschema-referencing/src/: registry.rs  resource.rs  uri.rs
crates/jsonschema-referencing/src/specification/: mod.rs
crates/jsonschema-testsuite/: Cargo.toml
crates/jsonschema-testsuite-codegen/: Cargo.toml
crates/jsonschema-testsuite-codegen/src/: generator.rs  lib.rs
crates/jsonschema-testsuite-internal/: Cargo.toml
crates/jsonschema/benches/: keywords.rs  metaschema.rs  unevaluated_properties.rs
crates/jsonschema/src/: compiler.rs  error.rs  evaluation.rs  lib.rs  node.rs  options.rs  output.rs  paths.rs  properties.rs  retriever.rs  types.rs  validator.rs
crates/jsonschema/src/ext/: cmp.rs  numeric.rs
crates/jsonschema/src/keywords/: additional_items.rs  any_of.rs  (+17 more)
crates/jsonschema/tests/: output_suite.rs  suite.rs
fuzz/fuzz_targets/: validation.rs
profiler/: Cargo.toml  Justfile
profiler/src/: main.rs
(+1 files in other folders)
